--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 .DS_Store
+js/data/old_treelets.js
+js/data/sphere_example.json
+js/data/icosphere_example.json
+js/data/treelets_killeroo.js
+js/data/treelets_sphere.js
