base visualbvh complete
can now visualize bvh nodes for new treelet structures

Also have script for parsing text file output from visualbvh branch of r2t2. Might be better to place in r2t2 scripts folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 
-.DS_Store
-js/data/old_treelets.js
-js/data/sphere_example.json
-js/data/icosphere_example.json
 js/data/treelets_killeroo.js
 js/data/treelets_sphere.js
+*.txt
+*.json
+js/data/.DS_Store
+js/.DS_Store
+scripts/.DS_Store
+.DS_Store
